# run_melos

./: .gitignore  README.md  Taskfile.yml  app.py  cdk.json  output.txt  pyproject.toml  request.json  requirements-dev.txt
.devcontainer/: .bashrc  Dockerfile  devcontainer.json  requirements-dev.txt
doc/design/: requirements_definition.md
doc/design/detailed/: init.md  story.md
doc/design/infra/: base.md  paramater.md
doc/design/madr/: 001_game_engine.md
doc/design/screen_/: document.md
src/app/init/: lambda_function.py
src/app/story/: lambda_function.py
src/cdk/construct/: api.py  function.py  table.py
src/cdk/stack/: backend.py  frontend.py
src/web/: package.json
src/web/public/: index.html  manifest.json
src/web/src/: App.tsx  index.css
src/web/src/components/: FormattedText.tsx  HomeButton.tsx  LoadingSpinner.tsx  MemoryButton.tsx  MemorySelectionPrompt.tsx  StoryDisplay.tsx
src/web/src/pages/: Game.tsx  Home.tsx
src/web/src/services/: api.ts
